--- a/.github/workflows/tar.yml
+++ b/.github/workflows/tar.yml
@@ -50,6 +50,7 @@ jobs:
           file_name="${image_name}.tar"
           git clone https://github.com/niceqwer55555/jmeter-slave-5.1.1
           cd jmeter-slave-5.1.1
+          chmod  -R 777 apache-jmeter-5.1.1
           tar -zcvf apache-jmeter-5.1.1.tar.gz apache-jmeter-5.1.1 
           sh ./build.sh
           cd ..
